fix for post width on mobile

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -258,6 +258,10 @@ footer {
   position: relative;
 }
 
+.post-text {
+  width: 100%;
+}
+
 .post-emoji {
   width: 100px !important;
   display: flex;
